--- a/js/refresh.html
+++ b/js/refresh.html
@@ -1,6 +1,6 @@
 <script language="JavaScript">
 var sURL = "<% $refresh_url %>";
-function doLoad() {  setTimeout( "refresh()", <% $seconds %> * 1000); }
+function mydoLoad() {  setTimeout( "refresh()", <% $seconds %> * 1000); }
 function refresh() { window.location.href = sURL; }
 </script>
 <script language="JavaScript1.1">
