--- a/overlay.html
+++ b/overlay.html
@@ -2,7 +2,7 @@
 % $query =~ s/\s+//g;
 % my $boot_table = qq"boot_$species";
 % my $mt = "mfe_$species";
-% my $new_accession = $db->MySelect({statement => qq/SELECT accession FROM genome WHERE accession regexp '$query' or genename regexp '$query' or locus regexp '$query' or comment regexp '$query'/, type => 'single'});
+% my $new_accession = $db->MySelect({statement => qq/SELECT accession FROM genome WHERE accession regexp '$query' or genename regexp '$query' or or comment regexp '$query'/, type => 'single'});
 % my $query_statement = qq"SELECT $mt.mfe, $boot_table.zscore, $mt.start, $mt.algorithm FROM $mt,$boot_table WHERE $boot_table.zscore IS NOT NULL AND $mt.mfe > -80 AND $mt.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND $mt.seqlength = 100 AND $mt.id = $boot_table.mfe_id AND $mt.accession = '$new_accession'";
 % my $overlay_points = $db->MySelect(statement => $query_statement,);
 % my $cloud_url = qq"images/cloud/${species}/cloud-${slipsites}-${seqlength}.png";
