--- a/filter.html
+++ b/filter.html
@@ -3,8 +3,8 @@
 Filter on species:
 <& species_selector.html, select_name => "species" &>
 
-</select>And algorithm:
-<select name="algorithm" >
+</select>And mfe_method:
+<select name="mfe_method" >
 <option selected="selected" value="pknots">pknots</option>
 <option value="nupack">nupack</option>
 </select><br>
