playing with graphs

--- a/cfeynman.html
+++ b/cfeynman.html
@@ -1,4 +1,4 @@
-% my $cfeynman_pic = new PRFGraph(config => $config, mfe_id => $mfeid, accession => $accession);
+% my $cfeynman_pic = new PRFGraph(config => $config, mfe_id => $mfeid, accession => $accession, species => $species);
 % my $cfeynman_url = $cfeynman_pic->Picture_Filename(type=> 'cfeynman', url => 'url',);
 % my $cfeynman_output_filename = $cfeynman_pic->Picture_Filename(type => 'cfeynman',);
 % my $cfeynman_dimensions = {};
