--- a/micro.html
+++ b/micro.html
@@ -79,7 +79,7 @@ MFE: <% $output->{$mir}->{$pos}->{mfe} %><br>
 <% $sequence %>
 <% $target_mis_spacer %><% $output->{$mir}->{$pos}->{target_mismatch} %>
 <% $spacer %><% $output->{$mir}->{$pos}->{target_match} %>
-<% $spacer %><% $output->{$mir}->{$pos}->{miRNA_match} %>
+<b><% $spacer %><% $output->{$mir}->{$pos}->{miRNA_match} %></b>
 <% $mi_mis_spacer %><% $output->{$mir}->{$pos}->{miRNA_mismatch} %>
 </pre>
 %#Mir    match: <% $output->{$mir}->{$pos}->{miRNA_match} %><br>
