--- a/single_detail.html
+++ b/single_detail.html
@@ -55,7 +55,7 @@
 	  <div align="right"><a href="/help/detail.html#algorithm"><strong>Algorithm: </strong></a></div>
 	</td>
 	<td>
-	  <% $information->{algorithm} %>
+	  <% $information->{mfe_method} %>
 	</td>
       </tr>
 
