--- a/detail.html
+++ b/detail.html
@@ -4,23 +4,25 @@
 
 <%init>
 my $information;
-my $species_genome_id = $db->MySelect(statement => "SELECT species, genome_id FROM gene_info WHERE accession = ?", type => 'row', vars => [$accession]);
+my $stmt = qq"SELECT species, genome_id FROM gene_info WHERE accession = ?";
+my $species_genome_id = $db->MySelect(statement => $stmt, type => 'row', vars => [$accession]);
 my $species = $species_genome_id->[0];
 my $genome_id = $species_genome_id->[1];
 my $mt = "mfe_$species";
+$mt = "mfe_virus" if ($mt =~ /virus/);
 my $bt = "boot_$species";
 $information->{species} = $species;
 $information->{accession} = $accession;
 $information->{slipstart} = $slipstart;
-$db->Remove_Duplicates($accession);
+$db->Remove_Duplicates($accession) or Callstack(message => qq"Failed Remove_Duplicated.");
 
 my ($detail_stmt, $info);
 if (!defined($slipstart)) {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id ORDER BY start, seqlength DESC, mfe_method DESC";
-  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,], type => 'list_of_hashes');
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,], type => 'list_of_hashes') or Callstack(message => $detail_stmt , die => 0);
 } else {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id AND $mt.start = ? ORDER BY seqlength DESC, mfe_method DESC";
-  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,$slipstart], type => 'list_of_hashes');
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,$slipstart], type => 'list_of_hashes') or Callstack(message => $detail_stmt, die => 0);
 }
 foreach my $entry_count (0 .. $#$info) {
     foreach my $info_key (keys %{$info->[$entry_count]}) {
@@ -46,12 +48,12 @@ foreach my $entry_count (0 .. $#$info) {
 
     ## Check the status of the randomized distribution
     my $boot_stmt = qq"SELECT mfe_values, mfe_mean, mfe_sd, mfe_se, zscore FROM $bt WHERE mfe_id = ?";
-    my $boot = $db->MySelect(statement => $boot_stmt, type => 'row', vars=>[$information->{id}],);
-    
-    if (!defined($boot) and $config->{do_boot} == 2) {
+    my $boot_info = $db->MySelect(statement => $boot_stmt, type => 'row', vars=>[$information->{id}],);
+    my $boot;
+    if (!defined($boot_info) and $config->{do_boot} == 2) {
 	## Add it to the webqueue
 	$db->Set_Queue(id => $information->{genome_id}, queue_table => 'webqueue');
-    } elsif (!defined($boot) and $config->{do_boot} == 1) {
+    } elsif (!defined($boot_info) and $config->{do_boot} == 1) {
 	$m->comp('generate_boot.html', information => $information);  ## , width => 11, height => 1,
 	my $data = ">tmp
 $information->{sequence}
@@ -70,8 +72,8 @@ $information->{sequence}
 			     iterations => $config->{boot_iterations},
 			     boot_mfe_methods => $config->{boot_mfe_methods},
 			     randomizers => $config->{boot_randomizers},);
-	my $bootlaces = $boot->Go();
-	$db->Put_Boot($bootlaces);
+	$boot_info = $boot->Go();
+	$db->Put_Boot($boot_info);
 	chdir($ENV{PRFDB_HOME});
     }
     ## Theoretically we should now have the randomized distribution set,
@@ -91,8 +93,8 @@ $information->{sequence}
     $information->{feynman_width} = $feynman_dimensions->{width};
 
     ## Revisiting the Boot and making the graph for it
-    if (defined($boot)) {
-	my $mfe_values = $boot->[0];
+    if (defined($boot_info)) {
+	my $mfe_values = $boot_info->[0];
 	$mfe_values =~ s/^\s+//g;
 	my @mfe_values_array = split(/\s+/, $mfe_values);
 	my $chart = new PRFGraph(config => $config, real_mfe => $information->{mfe},
@@ -104,10 +106,10 @@ $information->{sequence}
 	if (!-r $filename) {
 	    $chart = $chart->Make_Distribution();
 	}
-	$information->{mfe_mean} = $boot->[1];
-	$information->{mfe_sd} = $boot->[2];
-	$information->{mfe_se} = $boot->[3];
-	$information->{boot_db} = $boot->[4];
+	$information->{mfe_mean} = $boot_info->[1];
+	$information->{mfe_sd} = $boot_info->[2];
+	$information->{mfe_se} = $boot_info->[3];
+	$information->{boot_db} = $boot_info->[4];
 	if ($information->{mfe_sd} == 0) {
 	    $information->{zscore} = 0;
 	} else {
