--- a/download/bpseq.html
+++ b/download/bpseq.html
@@ -1,13 +1,13 @@
 <%init>
  $r->content_type('application/octet-stream');
  my $fh = \*STDOUT;
- my $ref = ref($fh);
  my $filename = qq"${mfeid}.bpseq";
  $r->headers_out->add('Content-disposition' => ("attachment; filename=$filename"));
- $db->Mfeid_to_Bpseq($mfeid, $fh);
+ $db->Mfeid_to_Bpseq($species, $mfeid, $fh);
 </%init>
 
 <%args>
  $mfeid => undef;
  $accession => undef;
+ $species => undef;
 </%args>
