--- a/make_distribution.html
+++ b/make_distribution.html
@@ -23,9 +23,11 @@ $suffix .= "-${seqlength}";
 my $cloud_output_filename = $cloud->Picture_Filename(type => 'cloud', species => $species, suffix => $suffix,);
 my $cloud_url = $cloud->Picture_Filename(type => 'cloud', species => $species, url => 'url', suffix => $suffix,);
 $cloud_url = $ENV{PRFDB_HOME} . '/' . $cloud_url;
-my ($points_stmt, $averages_stmt, $points, $averages);    
+my ($points, $averages);    
 my $mt = "mfe_$species";
 if (!-f $cloud_output_filename) {
+  $points = $db->Collect_Cloud(species => $species, seqlength => $seqlength, filters => \@filters);
+}
   $points_stmt = qq"SELECT $mt.mfe, $boot_table.zscore, $mt.accession, $mt.knotp, $mt.slipsite, $mt.start, genome.genename FROM $mt, $boot_table, genome WHERE $boot_table.zscore IS NOT NULL AND $mt.mfe > -80 AND $mt.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND $mt.seqlength = $seqlength AND $mt.id = $boot_table.mfe_id AND ";
   $averages_stmt = qq"SELECT avg($mt.mfe), avg($boot_table.zscore), stddev($mt.mfe), stddev($boot_table.zscore) FROM $mt, $boot_table WHERE $boot_table.zscore IS NOT NULL AND $mt.mfe > -80 AND $mt.mfe < 5 AND $boot_table.zscore > -10 AND $boot_table.zscore < 10 AND $mt.seqlength = $vars->{seqlength} AND $mt.id = $boot_table.mfe_id AND ";
   foreach my $filter (@filters) {
@@ -40,6 +42,7 @@ if (!-f $cloud_output_filename) {
   }
   $points_stmt .= " $mt.genome_id = genome.id";
   $averages_stmt =~ s/AND $//g;
+  print "TESTME: $points_stmt<br>\n";
   $points = $db->MySelect(statement => $points_stmt, vars => [$species]);
   $averages = $db->MySelect(statement => $averages_stmt, vars => [$species], type => 'row',);
   #    }
