--- a/detail.html
+++ b/detail.html
@@ -11,11 +11,11 @@ my $genome_id = $species_genome_id->[1];
 my $mt = "mfe_$species";
 $mt = "mfe_virus" if ($mt =~ /virus/);
 my $bt = "boot_$species";
+$bt = 'boot_virus' if ($bt =~ /virus/);
 $information->{species} = $species;
 $information->{accession} = $accession;
 $information->{slipstart} = $slipstart;
-$db->Remove_Duplicates($accession) or Callstack(message => qq"Failed Remove_Duplicated.");
-
+$db->Remove_Duplicates($accession);65
 my ($detail_stmt, $info);
 if (!defined($slipstart)) {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id ORDER BY start, seqlength DESC, mfe_method DESC";
