small changes, fixing adding some crontab information

--- a/distribution.html
+++ b/distribution.html
@@ -164,7 +164,7 @@ $(function() {
     yaxis: {
       min: -10.0,
       max: 5.0,
-      axisLabel: 'Z-score',
+      axisLabel: 'Z score',
       axisLabelUseCanvas: true },
     xaxis: {
       axisLabel: 'Predictions',
