--- a/search.html
+++ b/search.html
@@ -178,8 +178,9 @@ $(document).ready(function()
 
 </center>
 
-A majority of the Accessions in the PRFdb come from the Mammalian Genome Collection.
-It is available here: <a href="http://mgc.nci.nih.gov">http://mgc.nci.nih.gov</a>.
+The sequences of the PRFdb come from the yeast genome project and the NCBI nucleotide database.<br>
+They are available here: <a href="http://yeastgenome.org">Yeast Genome</a><br>
+and: <a href="http://ncbi.nih.nlm.gov/nucleotide">NCBI</a>.
 <hr>
 
 <form method="post" action="search_blast.html" enctype="application/x-www-form-urlencoded">
