--- a/detail.html
+++ b/detail.html
@@ -15,7 +15,7 @@ $bt = 'boot_virus' if ($bt =~ /virus/);
 $information->{species} = $species;
 $information->{accession} = $accession;
 $information->{slipstart} = $slipstart;
-$db->Remove_Duplicates($accession);65
+$db->Remove_Duplicates($accession);
 my ($detail_stmt, $info);
 if (!defined($slipstart)) {
   $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id ORDER BY start, seqlength DESC, mfe_method DESC";
