small debugging changes

--- a/single_detail.html
+++ b/single_detail.html
@@ -110,7 +110,7 @@
 	  <div align="right"><a href="/help/detail.html#mfe"><strong>MFE: </strong></a></div>
 	</td>
 	<td>
-	  <% $information->{mfe} %> kcal/mol
+	  <% $information->{mfe} %> kcal/mol (Turner99: <% $information->{mfe_turner} %> kcal/mol)
 	</td>
       </tr>
 
