--- a/micro.html
+++ b/micro.html
@@ -2,8 +2,16 @@
 <input type="hidden" name="species" value="<% $species %>">
 <input type="hidden" name="accession" value="<% $accession %>">
 <input type="hidden" name="start" value="<% $start %>">
+<input type="hidden" name="program" value="<% $program %>">
+
 % my $mfe_cutoff_new = $mfe_cutoff + $mfe_cutoff_change;
-<p>The current mfe cutoff is: <% $mfe_cutoff_new %> and change is <% $mfe_cutoff_change %> <br>
+<p>The current program is: <% $program %>, change it to:
+<select name="program" onchange="this.form.submit()">
+  <option value="rnahybrid">rnahybrid</option>
+  <option value="miranda">miranda</option>
+</select>
+<br>
+The current mfe cutoff is: <% $mfe_cutoff_new %> and change is <% $mfe_cutoff_change %> <br>
 Change the mfe cutoff value by
 <select name="mfe_cutoff_change" onchange="this.form.submit()">
   <option value="0.0">0 kcal/mol</option>
@@ -23,12 +31,17 @@ Change the mfe cutoff value by
 
 <br>
 
-Attempting to match <% $accession %>, <% $start %> against homo_sapiens miRNA sequences.<br>
+Attempting to match <% $accession %>, <% $start %> against homo_sapiens miRNA sequences using <% $program %>.<br>
 % my $table = qq"mfe_${species}";
 % my $sequence = $db->MySelect(type => 'single', statement => qq"SELECT sequence from $table WHERE accession = ? AND start = ?", vars => [$accession, $start]);
 % use MicroRNA;
 % my $micro = new MicroRNA(energy_cutoff => $mfe_cutoff_new);
-% my $output =  $micro->RNAHybrid($accession, $start);
+% my $output;
+% if ($program eq 'rnahybrid') {
+%   $output = $micro->RNAHybrid($accession, $start);
+% } else {
+%   $output = $micro->Miranda($accession, $start);
+% }
 % my $mi_counter = 0;
 % OUTER: foreach my $mir (sort keys %{$output}) {
 %  INNER: foreach my $pos (sort keys %{$output->{$mir}}) {
@@ -92,6 +105,7 @@ MFE: <% $output->{$mir}->{$pos}->{mfe} %><br>
 <p>There are <% $mi_counter %> hits.</p>
 
 <%args>
+  $program => 'rnahybrid';
   $accession => undef;
   $start => undef;
   $species => 'homo_sapiens';
